JuliaMono cuz why not, also maybe a fix to overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=JuliaMono&display=swap');
+
+body {
+    font-family: 'JuliaMono', monospace;
+}
 
 .hidden {
     display: none;
@@ -39,7 +44,7 @@ button:hover {
     box-shadow: 0 4px 8px #89dceb;
     padding: 20px;
     margin: 10px;
-    font-family: 'Arial', sans-serif;
+    font-family: 'JuliaMono', monospace;
     color: #11111b;
 }
 
@@ -75,6 +80,7 @@ button:hover {
     align-items: center;
     margin-bottom: 10px;
     color: #11111b;
+    word-break: break-word;
 }
 
 .card-item i {
@@ -87,6 +93,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     color: #11111b;
+    word-break: break-word;
 }
 
 .resolution-item-header {
@@ -160,4 +167,24 @@ button:hover {
 .resolution-text::-webkit-scrollbar-track {
     background: #f0f0f0;
     border-radius: 6px;
+}
+
+@media (max-width: 600px) {
+    .filter-container {
+        flex-direction: column;
+    }
+
+    .filter-container > div {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .card-header {
+        flex-direction: column;
+    }
+
+    .title-text {
+        white-space: normal;
+        overflow: visible;
+    }
 }
